// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render <Intro /> <Intro /> should render 1`] = `
Array [
  <div
    className="property__name-wrapper"
  >
    <h1
      className="property__name"
    >
      Beautiful & luxurious apartment at great location
    </h1>
    <button
      className="property__bookmark-button button"
      type="button"
    >
      <svg
        className="property__bookmark-icon"
        height="33"
        width="31"
      >
        <use
          xlinkHref="#icon-bookmark"
        />
      </svg>
      <span
        className="visually-hidden"
      >
        To bookmarks
      </span>
    </button>
  </div>,
  <div
    className="property__rating rating"
  >
    <div
      className="property__stars rating__stars"
    >
      <span
        style={
          Object {
            "width": "100%",
          }
        }
      />
      <span
        className="visually-hidden"
      >
        Rating
      </span>
    </div>
    <span
      className="property__rating-value rating__value"
    >
      4.51
    </span>
  </div>,
  <ul
    className="property__features"
  >
    <li
      className="property__feature property__feature--entire"
    >
      Apartment
    </li>
    <li
      className="property__feature property__feature--bedrooms"
    >
      3
       Bedrooms
    </li>
    <li
      className="property__feature property__feature--adults"
    >
      Max 
      4
       adults
    </li>
  </ul>,
  <div
    className="property__price"
  >
    <b
      className="property__price-value"
    >
      €
      1337
    </b>
    <span
      className="property__price-text"
    >
       night
    </span>
  </div>,
]
`;

exports[`Render <Intro /> <Intro /> should render with premium and book marks 1`] = `
Array [
  <div
    className="property__mark"
  >
    <span>
      Premium
    </span>
  </div>,
  <div
    className="property__name-wrapper"
  >
    <h1
      className="property__name"
    >
      Beautiful & luxurious apartment at great location
    </h1>
    <button
      className="property__bookmark-button button property__bookmark-button--active"
      type="button"
    >
      <svg
        className="property__bookmark-icon"
        height="33"
        width="31"
      >
        <use
          xlinkHref="#icon-bookmark"
        />
      </svg>
      <span
        className="visually-hidden"
      >
        To bookmarks
      </span>
    </button>
  </div>,
  <div
    className="property__rating rating"
  >
    <div
      className="property__stars rating__stars"
    >
      <span
        style={
          Object {
            "width": "100%",
          }
        }
      />
      <span
        className="visually-hidden"
      >
        Rating
      </span>
    </div>
    <span
      className="property__rating-value rating__value"
    >
      4.51
    </span>
  </div>,
  <ul
    className="property__features"
  >
    <li
      className="property__feature property__feature--entire"
    >
      Apartment
    </li>
    <li
      className="property__feature property__feature--bedrooms"
    >
      3
       Bedrooms
    </li>
    <li
      className="property__feature property__feature--adults"
    >
      Max 
      4
       adults
    </li>
  </ul>,
  <div
    className="property__price"
  >
    <b
      className="property__price-value"
    >
      €
      1337
    </b>
    <span
      className="property__price-text"
    >
       night
    </span>
  </div>,
]
`;
